--- a/css/article-detail.less
+++ b/css/article-detail.less
@@ -40,3 +40,10 @@
 .article-formation a {
     color: @color-formation-dark;
 }
+
+@media screen and (min-width: 860px) {
+    
+    .articleDetail {
+        margin-top: 20px;
+    }   
+}
