--- a/css/nav.less
+++ b/css/nav.less
@@ -1,6 +1,6 @@
 .nav {
 	background-color: white;
-	border-bottom: solid 1px @color-article-border;
+	// border-bottom: solid 1px @color-article-border;
 	line-height: 2.5rem;
 	color: @color-article-border;
 }
@@ -18,6 +18,7 @@
 
 .nav-logo {
     position: relative;
+    border-bottom: 3px solid hsl(0, 0%, 100%);
 }
 
 .nav-accueil,
@@ -103,9 +104,10 @@
 .header{
     left: 0;
     right: 0;
-    height: 3.5rem;
+    height: 3.55rem;
     // line-height: 66px;
     background-color: #FFF;
+    border-bottom: solid 1px @color-article-border;
 }
 
 .header__icon {
