--- a/css/post.less
+++ b/css/post.less
@@ -3,3 +3,12 @@
 .formation .post {
     margin: 0;
 }
+
+@media screen and (min-width: 860px){
+    
+    .post .axePrevention,
+    .post .axeRecherche,
+    .post .axeFormation {
+        display: none;
+    }
+}
