--- a/css/rwd.less
+++ b/css/rwd.less
@@ -11,19 +11,7 @@
     {
         padding: 10px 25px;
     }
-     
-     .axePrevention-detail,
-     .axeRecherche-detail,
-     .axeFormation-detail {
-         display: block;
-     }
-     
-     .axePrevention-image, 
-     .axeRecherche-image, 
-     .axeFormation-image {
-        height: 60px;
-    }
-       
+            
     .footer {
 	   height: 95px !important; /* change to .articleDetail */
     }
@@ -48,7 +36,7 @@
     }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 860px) {
 
     .logo-container {
         left: auto;
@@ -67,29 +55,19 @@
         display: none;
     }
     
+ 
+    
     .menu {
         position: static;
         transform: none;
         width: auto;  
         background-color: inherit; 
         transition-duration: initial;    
-    }
-	
-    .body-header,
-    .axePrevention,
-    .axeRecherche,
-    .axeFormation{
-        padding: 25px;
-    }
-    
-    .axePrevention-image, 
-    .axeRecherche-image, 
-    .axeFormation-image {
-        height: 70px;
-    }
+    }	
     	
 	.nav {
 		text-align: center;
+        height: 3.5rem;
 		line-height: 3.5rem;
 		display: flex;
 		flex-direction: row;
