--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -30,13 +30,13 @@
         <link rel="stylesheet" href="../../css/apropos.less">
         <link rel="stylesheet" href="../../css/axe.less">    
         <link rel="stylesheet" href="../../css/grid.less">  
-        <link rel="stylesheet" href="../../css/rwd.less">
         <link rel="stylesheet" href="../../css/qui-sommes-nous.less">
         <link rel="stylesheet" href="../../css/footer.less">
         <link rel="stylesheet" href="../../css/utilities.less">
         <link rel="stylesheet" href="../../css/inscription-et-tarif.less">
         <link rel="stylesheet" href="../../css/adhesion.less">
-        <link rel="stylesheet" href="../../css/post.html">
+        <link rel="stylesheet" href="../../css/post.less">
+        <link rel="stylesheet" href="../../css/rwd.less">
         <link rel="stylesheet" href="../../css/print.css">
         <!-- endbuild -->
     </head>    
