--- a/css/article.less
+++ b/css/article.less
@@ -5,10 +5,7 @@
 .membreBureau {
     border-bottom: solid 1px @color-article-border;
     background-color: @color-bg-article;    
-    padding-top: 20px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-bottom: 20px;
+    padding: 20px 10px;
 }
 
 .article-titre,
@@ -101,4 +98,12 @@
     margin-left: 24px;
     margin-top: -5px;
     color: color-font-secondary;
+}
+
+@media only screen and (min-width: 510px) {
+    
+    .articleResume,
+    .membreBureau {
+        padding: 20px 25px;
+    }  
 }
