--- a/css/logo.less
+++ b/css/logo.less
@@ -5,7 +5,8 @@
 
 .logo {
     position: absolute;
-    height: 40px;    
+    height: 40px;
+    width: 40px;
     margin-left: 10px;
     margin-top: 8px;
 }
@@ -15,6 +16,7 @@
     margin-left: 55px;
     line-height: 3.5rem;
     height: 9px;
+    width: 59.2px;
     fill: @color-bodyHeader;
 }
 
