correction icône svg sur safari

--- a/css/axe.less
+++ b/css/axe.less
@@ -150,6 +150,7 @@ axe{
         position: absolute;
         display: block;
         height: 60px;
+        left: 0;
         margin-left: 0;
     }
     
@@ -189,7 +190,15 @@ axe{
     .axeRecherche,
     .axeFormation{
         padding: 25px 10px;
-    }        
+        text-align: center;
+    }
+    
+    .axePrevention > div,
+    .axeRecherche >  div,
+    .axeFormation >  div {
+        text-align: left;
+        display: inline-block;
+    }
     
     .axePrevention-image,
     .axeRecherche-image,
