--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -46,7 +46,7 @@
                 <span class="imageAvatar imageAvatar-01 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{presidente}}</div>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+                    <div>{{presidente-description}}</div>
                 </div>
             </div>
             <h3 class="MembreAssociation-titre">Secrétaire</h3>
@@ -54,7 +54,7 @@
                 <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{secretaire}}</div>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
+                    <div>{{secretaire-description}}</div>
                 </div>
             </div>
             <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
