--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -7,23 +7,27 @@ body.quiSommesNous {
     margin-bottom: 1.5em;
 }
 
-.quiSommesNous-header-container {
-    background-color: #aaa;
-}
-
 .quiSommesNous-header {
-    padding: 10px;
-    color: white;
+    font-size: .95em;
+    padding: 20px 0;
     margin: 0 auto;
 }
 
 .adhesion-body,
 .quiSommesNous-body {    
-    padding: 20px 10px;
+    padding: 10px 10px;
     max-width: 40em;
     left: 0;
     right: 0;
     margin: auto;
+}
+
+.quiSommesNous-logo {
+    display: none;    
+}
+
+.quiSommesNous-logo-texte {
+    text-align: left;   
 }
 
 .quiSommesNous-objectif a {
@@ -129,15 +133,18 @@ body.quiSommesNous {
 .quiSommesNous-objectif--description {
 }
     
-.quiSommesNous-logo-apropos {
-    background: url(../assets/images/logo-apropos-112.png) no-repeat;
-    position: absolute;
-    margin-left: 25px;
-}
-
-@media only screen and (min-width: 480px){
+@media only screen and (min-width: 860px){
     
-    .quiSommesNous-header {   
-        width: 480px;
+    .quiSommesNous-logo {
+        display: block;
+        width: 66px;
+        height: 66px;
+        margin-top: 2px;
+        float: left;
+    }
+
+    .quiSommesNous-logo-texte {
+        float: left;
+        margin-left: 20px;
     }
 }
