finition page qui sommes nous

--- a/css/app.less
+++ b/css/app.less
@@ -80,6 +80,10 @@ a.readMore:hover::after {
     border-style: solid;
 }
 
-.clear {
-    clear: both;
+.clearfix:after { 
+  content: "";
+  visibility: hidden;
+  display: block;
+  height: 0;
+  clear: both;
 }
